# cydrogen

./: .gitignore  README.md  notes.md  pyproject.toml  requirements.txt  results.md  tmp.py  todo.md
demo/: demo_optimise.py  demo_system.py
doc/: neuralnetwork.sty  refs.bib  report.tex  slides.tex
scripts/: results.py
src/cydrogen/: __init__.py  graph.py  model.py  optimise.py  system.py  units.py
test/: test_graph.py  test_model.py  test_system.py
